# domestic_budget

./: .env.example  .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 023f0ad3a5ce_initial_migration.py  354a6b44b37e_create_accounts_table.py  576cf4d375ab_create_bank_accounts_table.py  ea55858555bd_create_accounts_table.py
app/: __init__.py  core.py  main.py
app/core/: core.py
app/core/database/: __init__.py  connection.py
app/database/: __init__.py  base.py  connection.py
app/models/: bank_account.py
app/modules/finance/: __init__.py
app/modules/finance/models/: accounts.py  categories.py  category.py  transactions.py
app/modules/finance/routers/: accounts.py  categories.py  category.py
app/modules/finance/schemas/: accounts.py  categories.py  category.py  transactions.py
app/modules/finance/services/: accounts.py  categories.py  category.py  seeding.py  transactions.py
app/routes/: __init__.py  bank_account.py
app/schemas/: bank_account.py
app/utils/: exception_handlers.py  response.py
migrations/: env.py
migrations/versions/: 24940d20161c_transactions_table_created.py  63d692f0d884_account_type_enum.py  95d52d79e9b6_category_table.py  9c8dcc9e4508_category_table.py  a3386f967b14_update_id_column.py  ef9722224629_initial_migration.py
